--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,7 @@
             "@auto-scripts"
         ], 
         "compile": [
-            "symfony console d:m:m"
+            "php bin/console doctrine:migrations:migrate"
         ]
         
     },
