--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,7 @@
             "@auto-scripts"
         ], 
         "compile": [
-            "php bin/console doctrine:migrations:migrate"
+            "php bin/console doctrine:migrations:migrate --write-sql"
         ]
         
     },
